--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.unip.tcc">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".AppApplication"
-        android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TCC">
+        android:theme="@style/Theme.TCC"
+        android:allowBackup="true">
         <activity
             android:name=".welcome.presentation.WelcomeActivity"
             android:exported="true">
